data/derived/comb/progs/unify/prog1268.ml.out
Characters 72-93:
  | h :: t -> h + additivePersistence t;;
                  ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
